Imported source from archive AdvArtilleryRemotes_0.2.0.zip

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2019-09-21
+  Features:
+    - update to factorio 0.18 - no changes
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2019-09-21
   Features:
     - initial release
----------------------------------------------------------------------------------------------------
