--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.0
+Date: 13.04.2021.
+  Major Features:
+    - Forked the original Advanced Artillery Remotes mod.
+    - Updated for Factorio 1.1.
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2019-09-21
   Features:
