--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Date: 9999-99-99
   Features:
   Bugfixes:
     - Fixed logic for finding enemy spawners and worms - all enemy forces will now be taken into the account.
+    - Fixed multi-surface usage/compatibility with Space Exploration satellite mode.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2021-04-13
