Added fallback setting for using cluster remote as regular artillery remote:
- Setting can be configured per-player.
- Provides means for player to use the cluster remote as vanilla
  artillery remote (if it can't target nests/worms).
- Refactored code slightly to make it easier to implement the
  setting. Reduces cluster remote function complexity a bit as well.

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
   Features:
+    - Fallback mode for using artillery cluster remote for targeting selected position with a single artillery round if no spawners/worms are found in vicinity. Configurable per-player, disabled by default.
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
