--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+  Changes:
+  Features:
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2022-07-29
   Features:
