Updated icons for the remotes:
- Switch to using up-to-date graphics from the vanilla game.
- Added more detailed licensing information, with proper attribution
  for Wube-produced graphics.
- Compose icons for the remotes as preparation for supporting multiple
  different types.

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 999.999.999
 Date: 9999-99-99
   Changes:
+    - Higher quality and reworked icons for artillery cluster and discovery remotes.
   Features:
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
