--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Date: 9999-99-99
     - Default (vanilla) artillery cluster remote has been slightly renamed to make it clearer what artillery ammo it uses (to cater for multiple artillery cluster remotes support).
     - Advanced artillery remotes are now grouped next to the other artillery-related items in the crafting and filter windows.
     - Merge radius for artillery cluster remotes is now calculated dynamically, using prototype information for projectiles.
+    - New (somewhat improved) algorithm for optimising targeting, designed to work better with more powerful explosions.
   Features:
     - Multiple artillery cluster remotes are now provided for each artillery ammo category type, allowing the use of non-vanilla artillery for cluster artillery strikes.
   Bugfixes:
