--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed crash when calculating damage radius for ammo category when action delivery has no projectile defined.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.0
 Date: 2023-01-17
