--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+  Changes:
+  Features:
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 4.0.1
 Date: 2023-01-18
   Bugfixes:
