--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed crash with current version of "Shortcuts for 1.1" mod (1.1.27). This is a temporary workaround, and long-term fix needs to be done in the "Shortcuts for 1.1" mod itself.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.2
 Date: 2023-01-20
