Fixed package context and changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2024-09-11
+  Bugfixes:
+    - Fixed package context and changelog
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2024-09-11
   Changes:
