--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2024-09-13
+  Changes:
+    - Improved math and algorithm for clustering
+    - Added tolerance for overlap to avoid missing enemies (set to 10% overlap currently)
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2024-09-11
   Bugfixes:
