Revert the algorithm change for calculating damage range defaults:
- Avoids breaking backwards compatibility, especially since an option
  was already present to modify the behaviour via mod settings.
- It might feel annoying to see just one regular artillery shell
  launched at a large nest, but maybe even more so seeing a bunch
  of (expensive) nukes hitting a small area.
- Include overrides in the command that show the damage range
  defaults.

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: 9999-99-99
   Features:
     - Updated for Factorio 2.0.
     - Advanced artillery remotes can be invoked via custom input.
+    - Confgured overrides are shown alongside defaults when using the /aar-show-damage-radius-defaults console command.
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.3
