Update the documentation for Factorio 2.0:
- Drop references to the outdated AtomicArtillery and
  AtomicArtilleryRemote mods.
- Document in more details the gotcha with the ammo categories and
  multiple artillery cluster remotes.
- Expand on the roadmap with some planned improvements/features.
- Add credits entry for kommade.
- Document configurable controls.

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,10 +3,10 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
     - Deprecated support for "Shortcuts" mod has been dropped.
-    - Advanced artillery remotes are provided as shortcuts instead of items.
+    - Advanced artillery remotes are provided as shortcuts instead of craftable items.
   Features:
     - Updated for Factorio 2.0.
-    - Advanced artillery remotes can be invoked via custom input.
+    - Advanced artillery remotes can be invoked via custom input controls.
     - Confgured overrides are shown alongside defaults when using the /aar-show-damage-radius-defaults console command.
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
